# LinAl

./: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  special_cell
LinAl/: _config.yml  _toc.yml  intro.md
LinAl/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
LinAl/_build/.doctrees/ch1/: main.doctree  p1.doctree  p2.doctree
LinAl/_build/.doctrees/ch2/: main.doctree  p1.doctree  p2.doctree  p3.doctree  p4.doctree  p5.doctree  p6.doctree
LinAl/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  search.html
LinAl/_build/html/_sources/ch1/: main.md  p1.ipynb
LinAl/_build/html/_sources/ch2/: main.md  p1.ipynb  p6.ipynb
LinAl/_build/html/ch2/: main.html  p1.html  p3.html  p5.html  p6.html
LinAl/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
LinAl/_build/jupyter_execute/ch1/: p1.ipynb  p2.ipynb
LinAl/_build/jupyter_execute/ch2/: p1.ipynb  p2.ipynb  p3.ipynb  p4.ipynb  p5.ipynb  p6.ipynb
LinAl/ch1/: p1.ipynb  p2.ipynb
LinAl/ch2/: p3.ipynb  p4.ipynb  p6.ipynb
_sources/: intro.md
_sources/ch1/: main.md  p2.ipynb
_sources/ch2/: p2.ipynb  p4.ipynb  p5.ipynb
ch1/: main.html  p1.html  p2.html
ch2/: main.html  p2.html  p4.html  p5.html
