[tool.poetry]
name = "linal"
version = "0.1.0"
description = ""
authors = ["DeminAnton <demantser@gmail.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.1"
scipy = "^1.15.0"
matplotlib = "^3.10.0"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
